<resources>
    <string name="app_name">ShippingCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="weightLBL">Enter the weight of\nyour packege</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>
</resources>
